# MetalGEMM

./: .gitignore  CMakeLists.txt  README.md
include/: gemm.hpp  matrix.hpp  types.hpp
shaders/: gemm.metal
src/: cpu_gemm.cpp  main.cpp  matrix.cpp  metal_gemm.mm
